--- a/src/SQLite.NetStandard/SQLite.NetStandard.csproj
+++ b/src/SQLite.NetStandard/SQLite.NetStandard.csproj
@@ -5,4 +5,12 @@
         <RootNamespace>SQLite</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup>
+    	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    	<PackageId>SQLite.NetStandard</PackageId>
+    	<Version>1.0.0</Version>
+    	<Title>.NetStandard SQLite Abstraction</Title>
+    	<Authors>Thomas Guzman</Authors>
+    </PropertyGroup>
+
 </Project>
