--- a/src/SQLite.NetStandard/SQLite.NetStandard.csproj
+++ b/src/SQLite.NetStandard/SQLite.NetStandard.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,7 +8,7 @@
     <PropertyGroup>
     	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     	<PackageId>SQLite.NetStandard</PackageId>
-    	<Version>1.0.1</Version>
+    	<Version>1.1.0</Version>
     	<Title>.NetStandard SQLite Abstraction</Title>
     	<Authors>Thomas Guzman</Authors>
         <PackageLicenseUrl>https://github.com/chingham/SQLite.NetStandard/blob/master/LICENSE</PackageLicenseUrl>
